2008-09-24  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryParameterDataProvider.cs,
	  Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 427702 - Code
	  Completion: 'is' and 'as' completion not working properly'.

2008-09-24  Mike Krüger <mkrueger@novell.com> 

	* Parser/NRefactoryParser.cs: Worked on tag comments.

2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: Worked on ctrl+space code
	  completion.

2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 429034 - Class alias
	  completion not working properly'.

2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryParameterDataProvider.cs,
	  Gui/CSharpTextEditorCompletion.cs: Added missing constructor
	  accessible check.

2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryParameterDataProvider.cs,
	  Gui/CSharpTextEditorCompletion.cs, Parser/NRefactoryParser.cs:
	  fixed 'Bug 427448 - Code Completion: completion of constructor
	  parameters not working'.

2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* Parser/NRefactoryParser.cs: Added pre processor #if directive
	  foldings.

2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryParameterDataProvider.cs, Gui/CSharpAmbience.cs: fixed
	  'Bug 429040 - Parameter completion tooltip not highlighting current
	  parameter'.

2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* Gui/MemberCompletionData.cs, Gui/ResolveVisitor.cs: fixed 'Bug 429035
	  - Completion of string.IsNullOrEmpty throws an exception'.

2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* Gui/NewOverrideCompletionData.cs: fixed 'Bug 429032 - Override
	  completion elements can't be selected by name'.

2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* Gui/MemberCompletionData.cs, Gui/CSharpTextEditorCompletion.cs: fixed
	  'Bug 429029 - Override completion missing some methods'.

2008-09-23  Mike Krüger <mkrueger@novell.com> 
