@@ -1,5 +1,11 @@
 2008-09-24  Mike Krüger <mkrueger@novell.com> 
 
+	* Gui/MemberCompletionData.cs, Gui/NewOverrideCompletionData.cs,
+	  Gui/ResolveVisitor.cs, Gui/NRefactoryParameterDataProvider.cs,
+	  Gui/CSharpAmbience.cs: Added support for C#3.0 extension methods.
+
+2008-09-24  Mike Krüger <mkrueger@novell.com> 
+
 	* Gui/NRefactoryParameterDataProvider.cs,
 	  Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 427702 - Code
 	  Completion: 'is' and 'as' completion not working properly'.
